--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
 </head>
 <body>
+    <header>
+        <h1>
+            <img src="./src/assets/pet.svg" alt="">
+            MUNDO PET
+        </h1>
+    </header>
+
     <main>
         <article>
             <form id="date-schedule">
@@ -148,5 +155,14 @@
 
         </article>
     </main>
+
+    <aside>
+        <button>NOVO AGENDAMENTO</button>
+    </aside>
+
+    <dialog>
+        
+    </dialog>
+
 </body>
 </html>
