Projeto em andamento

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./src/styles/index.css">
 
 </head>
 <body>
     <header>
         <h1>
-            <img src="./src/assets/pet.svg" alt="">
+            <img src="./src/assets/pet.svg" alt="Cachorro">
             MUNDO PET
         </h1>
     </header>
@@ -28,7 +27,7 @@
                     <p>Aqui você pode ver todos os clientes e serviços agendados para hoje.</p>
                 </div>
 
-                <input type="date" name="date-schedule" id="date-schedule">
+                <input type="date" name="date-schedule" id="date">
             </form>
 
             <section id="morning-schedules">
